--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </section>
 <!-- header-banner -->
 
-<section id="testimonials" class="pt-5 pb-5">
+<section id="testimonials" >
 <div class="container">
     <div class="row">
         <div class="col-md-8 ">
