added responsive part there

--- a/index.html
+++ b/index.html
@@ -49,116 +49,7 @@
 </section>
 <!-- header-banner -->
 
-<section id="testimonials" >
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 ">
 
-                <div class="row multi-cards flex-row-reverse" >
-
-                     <div class="card" style="margin-left: 15px">
-                            <div class="user-image text-center"> <img src="img/Mask.png" class="rounded-circle" width="70"> </div>
-                            <div class="user-about mt-2"> <span class="font-weight-bold d-block">مايكل ابراهيم</span> <span class="u-color"></span>
-                                <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                    <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                                </div>
-                                <p class="mt-2">
-                                    نقله نوعيه، وخدمه فريده ..ستوفر الوقت والجهد، اتمنى من فريق العمل زياده الخيارات في التطبيق.
-
-                                </p>
-
-                            </div>
-                        </div>
-
-
-                        <div class="card" style="margin-left: 15px">
-                            <div class="user-image text-center"> <img src="img/Mask_1.png" class="rounded-circle" width="70"> </div>
-                            <div class="user-about mt-2"> <span class="font-weight-bold d-block"> Amr Elshalakani </span> <span class="u-color"></span>
-                                <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                    <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                                </div>
-                                <p class="mt-2">
-                                    A very useful and user-friendly app. Good selection . in Arabic and English. Thanks to the team.
-
-                                </p>
-
-                            </div>
-                        </div>
-
-
-                        <div class="card" style="margin-left: 15px">
-                            <div class="user-image text-center"> <img src="img/Mask_2.png" class="rounded-circle" width="70"> </div>
-                            <div class="user-about mt-2"> <span class="font-weight-bold d-block"> سمية عبدالله هاشل</span> <span class="u-color"></span>
-                                <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                    <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                                </div>
-                                <p class="mt-2">
-                                    الابلكيشن سلس ومريح ومنظم جدا ...تجربة لطيفة فعل
-
-                                </p>
-
-                            </div>
-                        </div>
-                    <div class="card" style="margin-left: 15px">
-                        <div class="user-image text-center"> <img src="img/Mask.png" class="rounded-circle" width="70"> </div>
-                        <div class="user-about mt-2"> <span class="font-weight-bold d-block">مايكل ابراهيم</span> <span class="u-color"></span>
-                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                            </div>
-                            <p class="mt-2">
-                                نقله نوعيه، وخدمه فريده ..ستوفر الوقت والجهد، اتمنى من فريق العمل زياده الخيارات في التطبيق.
-
-                            </p>
-
-                        </div>
-                    </div>
-
-
-                    <div class="card" style="margin-left: 15px">
-                        <div class="user-image text-center"> <img src="img/Mask_1.png" class="rounded-circle" width="70"> </div>
-                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> Amr Elshalakani </span> <span class="u-color"></span>
-                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                            </div>
-                            <p class="mt-2">
-                                A very useful and user-friendly app. Good selection . in Arabic and English. Thanks to the team.
-
-                            </p>
-
-                        </div>
-                    </div>
-
-
-                    <div class="card" style="margin-left: 15px">
-                        <div class="user-image text-center"> <img src="img/Mask_2.png" class="rounded-circle" width="70"> </div>
-                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> سمية عبدالله هاشل</span> <span class="u-color"></span>
-                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
-                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
-                            </div>
-                            <p class="mt-2">
-                                الابلكيشن سلس ومريح ومنظم جدا ...تجربة لطيفة فعل
-
-                            </p>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        <div class="col-md-4">
-            <div class="testimonials-text">
-                <h2>اراء المستخدمين لدينا</h2>
-                <p>
-                    اضف منتجاتك و العروض المتاحة علي المنتجات و اماكن البيع في دقايق من خلال التطبيق
-
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-</section>
-<!--testimonials-->
 <section id="services" >
     <div class="container">
         <div class="row">
@@ -176,7 +67,7 @@
             </div>
             <div class="services-show">
                 <div class="flex-row-reverse row">
-                    <div class="col-md-3 col-ms-12">
+                    <div class=" col-lg-3 col-md-6 col-ms-12">
                         <div class="service-item">
                             <img src="img/Group_5560@3x.png" alt="service">
                             <p>
@@ -185,7 +76,7 @@
                         </div>
                     </div>
 <!--                    col-md -4-->
-                    <div class="col-md-3 col-ms-12">
+                    <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_26@3x.png" alt="service">
                             <p>
@@ -194,7 +85,7 @@
                         </div>
                     </div>
                     <!--                    col-md -4-->
-                    <div class="col-md-3 col-ms-12">
+                    <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_27@3x.png" alt="service">
                             <p>
@@ -203,7 +94,7 @@
                         </div>
                     </div>
                     <!--                    col-md -4-->
-                    <div class="col-md-3 col-ms-12">
+                    <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Group.png" alt="service">
                             <p>
@@ -222,14 +113,14 @@
 <section id="benefits">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class=" col-lg-6 col-md-12 col-sm-12">
                 <div class="app-photo">
                     <img src="img/mockup.png" alt="">
                 </div>
 <!--                app-photo -->
             </div>
 <!--            col-->
-            <div class="col-md-6 col-sm-12">
+            <div class=" col-lg-6 col-md-12 col-sm-12">
              <div class="benefits-text">
                  <h2>لو انت مستخدم خدمة ازاي قوابا هيساعدك؟</h2>
                  <div class="benefit-item d-flex">
@@ -299,7 +190,115 @@
     </div>
 <!--    container-->
 </section>
+<section id="testimonials" >
+    <div class="container">
+        <div class="row">
+            <div class=" col-lg-8 col-md-12  col-sm-12 ">
 
+                <div class="row multi-cards flex-row-reverse" >
+
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block">مايكل ابراهيم</span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                نقله نوعيه، وخدمه فريده ..ستوفر الوقت والجهد، اتمنى من فريق العمل زياده الخيارات في التطبيق.
+
+                            </p>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask_1.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> Amr Elshalakani </span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                A very useful and user-friendly app. Good selection . in Arabic and English. Thanks to the team.
+
+                            </p>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask_2.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> سمية عبدالله هاشل</span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                الابلكيشن سلس ومريح ومنظم جدا ...تجربة لطيفة فعل
+
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block">مايكل ابراهيم</span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                نقله نوعيه، وخدمه فريده ..ستوفر الوقت والجهد، اتمنى من فريق العمل زياده الخيارات في التطبيق.
+
+                            </p>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask_1.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> Amr Elshalakani </span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                A very useful and user-friendly app. Good selection . in Arabic and English. Thanks to the team.
+
+                            </p>
+
+                        </div>
+                    </div>
+
+                    <div class="card" style="margin-left: 15px">
+                        <div class="user-image text-center"> <img src="img/Mask_2.png" class="rounded-circle" width="70"> </div>
+                        <div class="user-about mt-2"> <span class="font-weight-bold d-block"> سمية عبدالله هاشل</span> <span class="u-color"></span>
+                            <div class="d-flex justify-content-center pt-2 pb-2 align-items-center">
+                                <div class="d-flex flex-row mt-1"> <i class="fa fa-star "></i> <i class="fa fa-star "></i> <i class="fa fa-star-o "></i> <i class="fa fa-star u-color"></i> <i class="fa fa-star"></i> </div>
+                            </div>
+                            <p class="mt-2">
+                                الابلكيشن سلس ومريح ومنظم جدا ...تجربة لطيفة فعل
+
+                            </p>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-md-12 col-lg-4 col-sm-12 ">
+                <div class="testimonials-text">
+                    <h2>اراء المستخدمين لدينا</h2>
+                    <p>
+                        اضف منتجاتك و العروض المتاحة علي المنتجات و اماكن البيع في دقايق من خلال التطبيق
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--testimonials-->
 <footer id="footer">
     <div class="container">
         <div class="row">
