--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -55,9 +56,9 @@
         <div class="row">
             <div class="col-12">
                 <div class="service-motto text-center">
-                    <h2>لو انت مقدم خدمة لماذا يجب أن تستخدم قوابا؟</h2>
+                    <h2 class=" wow slideInRight" data-wow-delay="1s">لو انت مقدم خدمة لماذا يجب أن تستخدم قوابا؟</h2>
                    <div class="text-service">
-                       <p>
+                       <p class=" wow slideInRight" data-wow-delay="1s">
                            إنها منصة تهدف إلى تسهيل جميع الإجراءات الجراحية التجميلية والتوصية
                            <br> بقائمة قائمة بأسماء الأطباء
 
@@ -70,7 +71,7 @@
                     <div class=" col-lg-3 col-md-6 col-ms-12">
                         <div class="service-item">
                             <img src="img/Group_5560@3x.png" alt="service">
-                            <p>
+                            <p class=" wow slideInRight" data-wow-delay="1s">
                                 احصل على المزيد من المرضى المهتمين بعمليات و منتجات التجميل عبر التطبيق.
                             </p>
                         </div>
@@ -79,7 +80,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_26@3x.png" alt="service">
-                            <p>
+                            <p class=" wow slideInRight" data-wow-delay="1s">
                                 اضف منتجاتك و العروض المتاحة علي المنتجات و اماكن البيع في دقايق من خلال التطبيق
                             </p>
                         </div>
@@ -88,7 +89,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_27@3x.png" alt="service">
-                            <p>
+                            <p class=" wow slideInRight" data-wow-delay="1s">
                                 قم بنشر عروضك و الاستفادة من قاعدة عملاء تضم ٥٠٠٠ عميل علي مستوي المملكة.
                             </p>
                         </div>
@@ -97,7 +98,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Group.png" alt="service">
-                            <p>
+                            <p class=" wow slideInRight" data-wow-delay="1s">
                                 مجتمع قوابا هو مرجعك الى كل مايخص الجمال تقدر تشوف من خلاله مقاطع وارشادات ودكاترة.
                             </p>
                         </div>
@@ -122,9 +123,9 @@
 <!--            col-->
             <div class=" col-lg-6 col-md-12 col-sm-12">
              <div class="benefits-text">
-                 <h2>لو انت مستخدم خدمة ازاي قوابا هيساعدك؟</h2>
+                 <h2 class=" wow slideInRight" data-wow-delay="1s">لو انت مستخدم خدمة ازاي قوابا هيساعدك؟</h2>
                  <div class="benefit-item d-flex">
-                     <p>
+                     <p class=" wow slideInRight" data-wow-delay="1s">
                          تشوف الاجراءات وتحجز وتاكد وتدفع الموعد المناسب ليك
 
                      </p>
@@ -132,7 +133,7 @@
 
                  </div>
                  <div class="benefit-item d-flex">
-                     <p>
+                     <p class=" wow slideInRight" data-wow-delay="1s">
                          تشوف المنتجات وتطلب وتدفع والمنتج يوصلك لحد البيت
 
                      </p>
@@ -140,7 +141,7 @@
 
                  </div>
                  <div class="benefit-item d-flex">
-                     <p>
+                     <p class=" wow slideInRight" data-wow-delay="1s">
                          مجتمع قوابا هو مرجعك الى كل مايخص الجمال تقدر تشوف من خلاله مقاطع وارشادات ودكاترة.
 
                      </p>
@@ -167,12 +168,12 @@
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="text-recommend">
-                  <h2>رشح صديقًا واربح</h2>
-                  <p>
+                  <h2 class=" wow slideInRight" data-wow-delay="1s">رشح صديقًا واربح</h2>
+                  <p class=" wow slideInRight" data-wow-delay="1s">
                       اضف منتجاتك و العروض المتاحة علي المنتجات <br>
                       و اماكن البيع في دقايق من خلال التطبيق
                   </p>
-                  <p>حمل التطبيق الأن </p>
+                  <p class=" wow slideInRight" data-wow-delay="1s">حمل التطبيق الأن </p>
                   <div class="downloads-app d-flex">
 
                       <a href="#" class="m-3">
@@ -337,6 +338,7 @@
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
 
