added responsive part 4 "white space"

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <div class="row">
             <div class="col-12">
                 <div class="service-motto text-center">
-                    <h2 class=" wow slideInRight" data-wow-delay="1s">لو انت مقدم خدمة لماذا يجب أن تستخدم قوابا؟</h2>
+                    <h2 class=" wow slideInDown" data-wow-delay="1s">لو انت مقدم خدمة لماذا يجب أن تستخدم قوابا؟</h2>
                    <div class="text-service">
-                       <p class=" wow slideInRight" data-wow-delay="1s">
+                       <p class=" wow slideInDown" data-wow-delay="1s">
                            إنها منصة تهدف إلى تسهيل جميع الإجراءات الجراحية التجميلية والتوصية
                            <br> بقائمة قائمة بأسماء الأطباء
 
@@ -71,7 +71,7 @@
                     <div class=" col-lg-3 col-md-6 col-ms-12">
                         <div class="service-item">
                             <img src="img/Group_5560@3x.png" alt="service">
-                            <p class=" wow slideInRight" data-wow-delay="1s">
+                            <p class=" wow slideInDown" data-wow-delay="1s">
                                 احصل على المزيد من المرضى المهتمين بعمليات و منتجات التجميل عبر التطبيق.
                             </p>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_26@3x.png" alt="service">
-                            <p class=" wow slideInRight" data-wow-delay="1s">
+                            <p class=" wow slideInDown" data-wow-delay="1s">
                                 اضف منتجاتك و العروض المتاحة علي المنتجات و اماكن البيع في دقايق من خلال التطبيق
                             </p>
                         </div>
@@ -89,7 +89,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Mask_Group_27@3x.png" alt="service">
-                            <p class=" wow slideInRight" data-wow-delay="1s">
+                            <p class=" wow slideInDown" data-wow-delay="1s">
                                 قم بنشر عروضك و الاستفادة من قاعدة عملاء تضم ٥٠٠٠ عميل علي مستوي المملكة.
                             </p>
                         </div>
@@ -98,7 +98,7 @@
                     <div class="col-lg-3 col-md-6  col-ms-12">
                         <div class="service-item">
                             <img src="img/Group.png" alt="service">
-                            <p class=" wow slideInRight" data-wow-delay="1s">
+                            <p class=" wow slideInDown" data-wow-delay="1s">
                                 مجتمع قوابا هو مرجعك الى كل مايخص الجمال تقدر تشوف من خلاله مقاطع وارشادات ودكاترة.
                             </p>
                         </div>
@@ -125,7 +125,7 @@
              <div class="benefits-text">
                  <h2 class=" wow slideInRight" data-wow-delay="1s">لو انت مستخدم خدمة ازاي قوابا هيساعدك؟</h2>
                  <div class="benefit-item d-flex">
-                     <p class=" wow slideInRight" data-wow-delay="1s">
+                     <p class=" wow slideInDown" data-wow-delay="1s">
                          تشوف الاجراءات وتحجز وتاكد وتدفع الموعد المناسب ليك
 
                      </p>
@@ -133,7 +133,7 @@
 
                  </div>
                  <div class="benefit-item d-flex">
-                     <p class=" wow slideInRight" data-wow-delay="1s">
+                     <p class=" wow slideInDown" data-wow-delay="1s">
                          تشوف المنتجات وتطلب وتدفع والمنتج يوصلك لحد البيت
 
                      </p>
@@ -141,7 +141,7 @@
 
                  </div>
                  <div class="benefit-item d-flex">
-                     <p class=" wow slideInRight" data-wow-delay="1s">
+                     <p class=" wow slideInDown" data-wow-delay="1s">
                          مجتمع قوابا هو مرجعك الى كل مايخص الجمال تقدر تشوف من خلاله مقاطع وارشادات ودكاترة.
 
                      </p>
@@ -168,12 +168,12 @@
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="text-recommend">
-                  <h2 class=" wow slideInRight" data-wow-delay="1s">رشح صديقًا واربح</h2>
-                  <p class=" wow slideInRight" data-wow-delay="1s">
+                  <h2 class=" wow slideInDown" data-wow-delay="1s">رشح صديقًا واربح</h2>
+                  <p class=" wow slideInDown" data-wow-delay="1s">
                       اضف منتجاتك و العروض المتاحة علي المنتجات <br>
                       و اماكن البيع في دقايق من خلال التطبيق
                   </p>
-                  <p class=" wow slideInRight" data-wow-delay="1s">حمل التطبيق الأن </p>
+                  <p class=" wow slideInDown" data-wow-delay="1s">حمل التطبيق الأن </p>
                   <div class="downloads-app d-flex">
 
                       <a href="#" class="m-3">
